[gd_scene load_steps=13 format=3 uid="uid://p82kxx2s84qn"]

[ext_resource type="Script" uid="uid://bjgi5ldghjxbk" path="res://MainGame.gd" id="1_vs82q"]
[ext_resource type="Script" uid="uid://1yluiwn0qjp3" path="res://SuccubusHex.gd" id="2_qsiih"]
[ext_resource type="Texture2D" uid="uid://d3a6q8vvs3lje" path="res://assets/images/Hex/money.png" id="3_7d840"]
[ext_resource type="Texture2D" uid="uid://djbjicmfw1l6w" path="res://assets/images/Hex/idle.png" id="4_utvnp"]
[ext_resource type="Script" uid="uid://dkn5dgg4ngyxn" path="res://SlotMachine.gd" id="5_vtnxl"]
[ext_resource type="Shader" uid="uid://c8koq23d2fomi" path="res://Succubus.gdshader" id="6_16xnu"]
[ext_resource type="Script" uid="uid://yixg7xkinklb" path="res://color_rect.gd" id="7_lupq4"]
[ext_resource type="Texture2D" uid="uid://dlenbeokfkikv" path="res://assets/images/Slots/SlotFrame.png" id="8_4h46e"]
[ext_resource type="Script" uid="uid://dk66b5d4j3r4m" path="res://Shop.gd" id="10_r0bag"]
[ext_resource type="Script" uid="uid://cmc0jv31kr887" path="res://UI.gd" id="11_hogh4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o8l48"]
shader = ExtResource("6_16xnu")
shader_parameter/temptation_red = Color(0.8, 0, 0.1, 1)
shader_parameter/corruption_purple = Color(0.5, 0, 0.9, 1)
shader_parameter/obsidian_black = Color(0.08, 0.05, 0.09, 1)
shader_parameter/spin_speed = 1.0
shader_parameter/move_speed = 7.0
shader_parameter/contrast = 3.5
shader_parameter/zoom = 25.102
shader_parameter/pixel_filter = 740.0
shader_parameter/chromatic_aberration = 0.05
shader_parameter/noise_amount = 0.052
shader_parameter/scanline_intensity = 0.095
shader_parameter/screen_jitter = 0.004
shader_parameter/vignette_darkness = 1.486
shader_parameter/screen_size = Vector2(0, 0)

[sub_resource type="GDScript" id="GDScript_rtryj"]
script/source = "extends Control

func deposit(amount):
	if Global.coins >= amount:
		Global.coins -= amount
		Global.debt -= amount
		if Global.debt <= 0:
			get_parent().next_round()

func update_debt(debt_amount):
	$UI/DebtLabel.text = \"Debt: %d\" % debt_amount
"

[node name="MainGame" type="Node"]
script = ExtResource("1_vs82q")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="GameplayRoot" type="Node2D" parent="."]

[node name="Bedroom" type="Node2D" parent="GameplayRoot"]
z_index = 5
position = Vector2(542, 612)
scale = Vector2(0.5, 0.5)
script = ExtResource("2_qsiih")

[node name="Money" type="Sprite2D" parent="GameplayRoot/Bedroom"]
visible = false
z_index = 4
position = Vector2(-1264, 80)
rotation = 0.39968
scale = Vector2(2.24159, 2.24159)
texture = ExtResource("3_7d840")

[node name="Idle" type="Sprite2D" parent="GameplayRoot/Bedroom"]
visible = false
z_index = -12
position = Vector2(-496, 744)
scale = Vector2(3.16887, 3.16887)
texture = ExtResource("4_utvnp")

[node name="Polygon2D" type="Polygon2D" parent="GameplayRoot/Bedroom"]
z_index = -2
color = Color(0.305882, 0.305882, 0.305882, 1)
polygon = PackedVector2Array(-1106, 424, 1094, 418, 1084, 2608, -1084, 2608)

[node name="SlotMachine" type="Node2D" parent="GameplayRoot"]
z_index = 5
position = Vector2(1, 0)
script = ExtResource("5_vtnxl")

[node name="ColorRect" type="ColorRect" parent="GameplayRoot/SlotMachine"]
z_index = 1
material = SubResource("ShaderMaterial_o8l48")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("7_lupq4")

[node name="SlotFrame" type="Sprite2D" parent="GameplayRoot/SlotMachine"]
z_index = 2
position = Vector2(542, 962)
texture = ExtResource("8_4h46e")

[node name="Reels" type="HBoxContainer" parent="GameplayRoot/SlotMachine"]
custom_minimum_size = Vector2(600, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 110.0
offset_top = 985.0
offset_right = 941.0
offset_bottom = 1525.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reel1" type="VBoxContainer" parent="GameplayRoot/SlotMachine/Reels"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
size_flags_horizontal = 3

[node name="Reel2" type="VBoxContainer" parent="GameplayRoot/SlotMachine/Reels"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
size_flags_horizontal = 3

[node name="Reel3" type="VBoxContainer" parent="GameplayRoot/SlotMachine/Reels"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
size_flags_horizontal = 3

[node name="Reel4" type="VBoxContainer" parent="GameplayRoot/SlotMachine/Reels"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
size_flags_horizontal = 3

[node name="Spin" type="Button" parent="GameplayRoot/SlotMachine"]
z_index = 2
offset_left = 384.0
offset_top = 1566.0
offset_right = 696.0
offset_bottom = 1722.0
theme_override_font_sizes/font_size = 50
text = "SPIN"
icon_alignment = 1

[node name="SpinPurchaseUI" type="Control" parent="GameplayRoot/SlotMachine"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SpinPurchase" type="VBoxContainer" parent="GameplayRoot/SlotMachine/SpinPurchaseUI"]
layout_mode = 0
offset_left = 368.0
offset_top = 1134.0
offset_right = 507.0
offset_bottom = 1239.0
scale = Vector2(2.4, 2.4)

[node name="Label" type="Label" parent="GameplayRoot/SlotMachine/SpinPurchaseUI/SpinPurchase"]
layout_mode = 2
text = "How many spins pet?"
horizontal_alignment = 1

[node name="SpinAmountBox" type="SpinBox" parent="GameplayRoot/SlotMachine/SpinPurchaseUI/SpinPurchase"]
layout_mode = 2
min_value = 1.0
max_value = 8.0
value = 1.0
alignment = 1
suffix = "Spins"

[node name="SpinPurchaseButton" type="Button" parent="GameplayRoot/SlotMachine/SpinPurchaseUI/SpinPurchase"]
layout_mode = 2
text = "Buy"

[node name="SpinCostLabel" type="Label" parent="GameplayRoot/SlotMachine/SpinPurchaseUI/SpinPurchase"]
layout_mode = 2

[node name="SpendRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="ATM" type="Control" parent="SpendRoot"]
anchors_preset = 0
offset_left = 77.0
offset_top = 1462.0
offset_right = 77.0
offset_bottom = 1462.0
script = SubResource("GDScript_rtryj")

[node name="DebtLabel" type="Label" parent="SpendRoot/ATM"]
z_index = 3
layout_mode = 0
offset_left = 213.0
offset_top = -289.0
offset_right = 753.0
offset_bottom = -11.0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinningsLabel" type="Label" parent="SpendRoot/ATM"]
z_index = 3
layout_mode = 0
offset_left = 215.0
offset_top = -433.0
offset_right = 755.0
offset_bottom = -155.0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="ATMButtons" type="HBoxContainer" parent="SpendRoot/ATM"]
z_index = 2
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 166.0
offset_top = 137.0
offset_right = 559.0
offset_bottom = 214.0
scale = Vector2(1.48, 1.48)
theme_override_constants/separation = 42
alignment = 1

[node name="Deposit" type="Button" parent="SpendRoot/ATM/ATMButtons"]
z_index = 2
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "DEPOSIT"

[node name="Close" type="Button" parent="SpendRoot/ATM/ATMButtons"]
z_index = 2
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Close"

[node name="Shop" type="Control" parent="SpendRoot"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("10_r0bag")

[node name="Panel" type="Panel" parent="SpendRoot/Shop"]
z_index = -1
layout_mode = 0
offset_left = 461.0
offset_top = 93.0
offset_right = 1059.0
offset_bottom = 593.0

[node name="CarouselContainer" type="Control" parent="SpendRoot/Shop"]
z_index = 5
custom_minimum_size = Vector2(600, 500)
layout_mode = 3
anchors_preset = 0
offset_left = 460.0
offset_top = 93.0
offset_right = 1060.0
offset_bottom = 593.0

[node name="ItemDisplay" type="TextureRect" parent="SpendRoot/Shop/CarouselContainer"]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="LeftArrow" type="Button" parent="SpendRoot/Shop/CarouselContainer"]
z_index = 2
custom_minimum_size = Vector2(40, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2

[node name="RightArrow" type="Button" parent="SpendRoot/Shop/CarouselContainer"]
z_index = 2
custom_minimum_size = Vector2(40, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SpendRoot/Shop"]
layout_mode = 0
offset_left = 144.0
offset_top = 578.0
offset_right = 1074.0
offset_bottom = 808.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Panel2" type="Panel" parent="SpendRoot/Shop/MarginContainer"]
z_index = -1
layout_mode = 2

[node name="InfoPanel" type="VBoxContainer" parent="SpendRoot/Shop/MarginContainer"]
custom_minimum_size = Vector2(900, 200)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 12
alignment = 1

[node name="ItemNameLabel" type="Label" parent="SpendRoot/Shop/MarginContainer/InfoPanel"]
layout_mode = 2
horizontal_alignment = 1

[node name="ItemDescriptionLabel" type="Label" parent="SpendRoot/Shop/MarginContainer/InfoPanel"]
layout_mode = 2
horizontal_alignment = 1

[node name="ConfirmationLabel" type="Label" parent="SpendRoot/Shop/MarginContainer/InfoPanel"]
layout_mode = 2
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="SpendRoot/Shop/MarginContainer/InfoPanel"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Buy"
icon_alignment = 1

[node name="TicketsLabel" type="Label" parent="SpendRoot/Shop/MarginContainer/InfoPanel"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.997642, 0.8091, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
horizontal_alignment = 1
autowrap_mode = 2

[node name="MessageLabel" type="Label" parent="SpendRoot/Shop"]
z_index = 2
layout_mode = 0
offset_left = 501.0
offset_top = 96.0
offset_right = 1014.0
offset_bottom = 593.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("11_hogh4")

[node name="EscapeLabel" type="Label" parent="UI"]
offset_left = 114.0
offset_top = 837.0
offset_right = 955.0
offset_bottom = 946.0
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 35

[node name="Counters" type="HBoxContainer" parent="UI"]
custom_minimum_size = Vector2(50, 50)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_right = 25.0
offset_bottom = 50.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="SpinsLeftLabel" type="Label" parent="UI/Counters"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 35

[node name="CoinsLabel" type="Label" parent="UI/Counters"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 35

[node name="DebtLabel" type="Label" parent="UI/Counters"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 35

[node name="TicketsLabel" type="Label" parent="UI/Counters"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 35

[node name="DayLabel" type="Label" parent="UI/Counters"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 35

[node name="InterestLabel" type="Label" parent="UI/Counters"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 35

[connection signal="pressed" from="GameplayRoot/SlotMachine/Spin" to="." method="_on_spin_button_pressed"]
[connection signal="value_changed" from="GameplayRoot/SlotMachine/SpinPurchaseUI/SpinPurchase/SpinAmountBox" to="GameplayRoot/SlotMachine" method="_on_spin_amount_box_value_changed"]
[connection signal="pressed" from="GameplayRoot/SlotMachine/SpinPurchaseUI/SpinPurchase/SpinPurchaseButton" to="GameplayRoot/SlotMachine" method="_on_spin_purchase_button_pressed"]
[connection signal="pressed" from="SpendRoot/ATM/ATMButtons/Close" to="." method="_on_atm_close_button_pressed"]
[connection signal="pressed" from="SpendRoot/Shop/CarouselContainer/LeftArrow" to="SpendRoot/Shop" method="show_previous"]
[connection signal="pressed" from="SpendRoot/Shop/CarouselContainer/RightArrow" to="SpendRoot/Shop" method="show_next"]
[connection signal="pressed" from="SpendRoot/Shop/MarginContainer/InfoPanel/BuyButton" to="SpendRoot/Shop" method="purchase_current"]
